<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
        name="vm"
        type="com.orobator.helloandroid.lesson09_lab.viewmodel.TipCalcViewModel"/>
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".TipCalcActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="?attr/colorPrimary"
          app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Set vm variable for child layout-->
    <include
        app:vm="@{vm}"
        layout="@layout/content_tip_calc"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calculate_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_content_margin"
        app:srcCompat="@drawable/ic_attach_money_24dp"
        android:onClick="@{() -> vm.calculateTip()}"/>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>